--- a/tem/src/main/resources/application.properties
+++ b/tem/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 # Datasource 
-spring.datasource.url=jdbc:mysql://localhost:3306/tem
+spring.datasource.url=jdbc:mysql://localhost:3306/tem?serverTimezone=UTC
 spring.datasource.username=root
-
 # Hibernate
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto = update
