--- a/tem/pom.xml
+++ b/tem/pom.xml
@@ -68,6 +68,7 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency><groupId>org.seleniumhq.selenium</groupId><artifactId>selenium-java</artifactId><version>3.141.59</version></dependency>
     </dependencies>
 
 	<build>
