--- a/tem/pom.xml
+++ b/tem/pom.xml
@@ -15,6 +15,7 @@
 	<description>TEM - Transport Efficiency Manager</description>
 	<properties>
 		<java.version>11</java.version>
+		<powermock.version>2.0.2</powermock.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -68,8 +69,26 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        
+	   <dependency>
+	      <groupId>org.powermock</groupId>
+	      <artifactId>powermock-module-junit4-legacy</artifactId>
+	      <version>${powermock.version}</version>
+	      <scope>test</scope>
+	   </dependency>
+	   <dependency>
+	      <groupId>org.powermock</groupId>
+	      <artifactId>powermock-api-mockito2</artifactId>
+	      <version>${powermock.version}</version>
+	      <scope>test</scope>
+	   </dependency>
+        
         <dependency><groupId>org.seleniumhq.selenium</groupId><artifactId>selenium-java</artifactId><version>3.141.59</version></dependency>
     </dependencies>
+    
+
+
+
 
 	<build>
 		<plugins>
